...
        </Mapbox.MapView>
      </View>
      {/* Floor Navigation Buttons */}
      <View style={styles.floorButtonContainer}>
        <TouchableOpacity 
          style={styles.button}
          testID="floor-up"
        >
          <MaterialIcons name="keyboard-arrow-up" size={24} color="black" />
        </TouchableOpacity>
        <Text style={styles.text}>1</Text>
        <TouchableOpacity 
          style={styles.button}
...
        ]}
      >
        {/* Location-City Button */}
        <TouchableOpacity
          style={styles.button}
          onPress={() => setIsExpanded(!isExpanded)}
          testID="buildings-button"
        >
          <MaterialIcons name="location-city" size={24} color="black" />
        </TouchableOpacity>

        {/* Expanded Buttons */}
        {isExpanded && (
...
