appId: com.anonymous.myApp  
---
- launchApp

# Open the Points of Interest page
- tapOn:
    id: "interestButton"



# wait for the page to load
- assertNotVisible:
    id: Loading places...
- waitForAnimationToEnd

# Swipe up to scroll through points of interest
- swipe:
    start: 47%,67%
    end: 49%,20%
    duration: 638

# Open the Filter menu
- tapOn: " Filter"

# Select filter options
- tapOn:
    id: "activitySwitch"
- tapOn:
    id: "restaurantSwitch"

#close the filter menu
- tapOn: "Apply Filters"

# Select a point of interest
- tapOn: " Get Directions"

#open the poi button bottom right
- tapOn: ""
- "waitForAnimationToEnd"

# Open the Filter menu again
- tapOn: ""

# set distance range
- swipe:
    start: "91%,54%"
    end: "63%,54%"
    duration: 740

# apply filter
- tapOn: "Apply Filters"

