appId: com.anonymous.myApp  
---
- launchApp

# Select SGW campus
- tapOn:
    id: "sgwButton"

# Tap on the origin location field and enter "Hall"
- tapOn: "Type or select origin location"
- inputText: "Hall"

# Select the suggested "Hall" option
- tapOn:
    point: 49%,26%

# Tap on the destination location field and enter "JMSB"
- tapOn: "Type or select destination location"
- inputText: "JMSB"

# Select the suggested "JMSB" option
- tapOn:
    point: 49%,26%

# Get directions
- tapOn: "Get Directions"

# Select different route options
- tapOn: " 1 min"
- tapOn: " 3 min"
- tapOn: " 3 min"
- tapOn: " 1 min"

# Toggle disability
- tapOn:
    point: "11%,65%"
- tapOn:
    point: "11%,65%"

# View steps
- tapOn: "Steps"
- tapOn:
    point: 50%,63%

# Click on GO
- tapOn:
    point: "81%,76%"