# maestro.yaml is a configuration file that Maestro uses to run tests.
#It is a YAML file that contains the test scenarios and steps to execute them. 

# appId: com.anonymous.myApp  
# ---
# - launchApp
# - tapOn: "loginButton"
# - waitForAnimationToEnd
# - tapOn: "submitButton"

appId: com.anonymous.myApp  
---
- launchApp

- tapOn: 
    id: "sgwButton"
- tapOn: ""
- tapOn: 
    id: "loyolaButton"
- tapOn: ""
- tapOn: 
    id: "interestButton"
- tapOn: ""
- tapOn: 
    id: "shuttleScheduleButton"
- tapOn: "✖"
- tapOn:
    id: "calendarfetchbutton"


# # Indoor Map Tests
# - tapOn: "floor-up"
# - tapOn: "floor-down"
# - tapOn: "buildings-button"
